refatorado testes de service e controller.